# PhotoChecker

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  QWEN.md  README.md  TAURI_IMPLEMENTATION_ISSUES.md  TAURI_IMPLEMENTATION_PLAN.md  build.gradle.kts  commitlint.config.js  cz-config.js  package.json  pnpm-workspace.yaml  settings.gradle.kts
.claude/: settings.local.json
.husky/: pre-commit
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
harmony/: build-profile.json5  oh-package-lock.json5
harmony/AppScope/: app.json5
harmony/entry/: build-profile.json5
tauri/: .editorconfig  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  COMMIT_GUIDE.md  DEBUG_GUIDE.md  PROJECT_STRUCTURE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test_automation.js  test_manual.html  test_photo_fixes.js  test_photo_selection.js  tsconfig.json  vite.config.ts
tauri/docs/: i18n-design.md
tauri/src/: App.tsx  entry.client.tsx  entry.server.tsx  index.css  (+3 more)
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs
tauri/src-tauri/src/commands/: exif.rs  mod.rs  photo.rs
tauri/src-tauri/src/models/: exif_tag.rs  mod.rs  photo_info.rs
tauri/src-tauri/src/services/: enhanced_exif_service.rs.disabled  exif_service.rs  mod.rs  photo_service.rs
tauri/src-tauri/src/utils/: file_utils.rs  mod.rs
web/: .gitignore  Dockerfile  docker-compose.yml  privacy.html
(+202 files in other folders)
