[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"

# EXIF解析依赖
kamadak-exif = "0.6.1"
image = "0.24"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev.package.objc2]
debug-assertions = false
